--- a/style.css
+++ b/style.css
@@ -16,24 +16,70 @@
 
 body {
   background-image: url(./img/bg_1.jpg);
+  background-attachment: fixed;
+}
+
+.navbar {
+  background-color: var(--col-dark);
+  position: fixed;
+  width: 100%;
+  height: 92px;
+  display: flex;
+  justify-content: end;
+  z-index: 9999;
+}
+
+.navbar ul {
+  display: flex;
+  align-items: center;
+  width: 40%;
+  justify-content: space-around;
+}
+
+.navbar ul li a {
+  font-size: 1.2em;
+  font-family: var(--inner-header);
+  color: var(--col-light);
+  cursor: pointer;
+  transition: all 300ms ease-in-out;
+}
+
+.navbar ul li a:hover {
+  filter: blur(1px);
+  color: #fff;
+}
+
+.header-top {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 60%;
 }
 
 h1 {
-  font-size: 4em;
+  font-size: 2.3em;
   padding: 24px;
+  color: var(--col-light);
 }
 
-h2 {
-  font-size: 3em;
-  padding: 12px;
-  border-top: 2px dashed var(--col-dark);
-  margin-top: 8px;
+.list-header {
+  color:var(--col-dark);
+  margin-top: 92px;
+  font-family: var(--inner-header);
 }
 
-h1,
-h2 {
-  text-align: center;
-  font-family: var(--inner-content);
+.timer {
+  position: fixed;
+  display: flex;
+  height: 24px;
+  z-index: 99;
+  color: var(--col-dark);
+  padding-top: 100px;
+  padding-right: 24px;
+  right: 0;
+  top: 0;
+  font-family: var(--inner-header);
+  font-weight: bold;
 }
 
 .books {
@@ -41,16 +87,17 @@ h2 {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  height: auto;
+  min-height: 80vh;
 }
 
 .books-wrapper {
   display: flex;
+  flex-direction: column;
   width: 100%;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   gap: 10px;
+  padding-bottom: 70px;
 }
 
 input {
@@ -101,11 +148,18 @@ button:hover {
   transform: rotate(270deg);
 }
 
+.input-header {
+  text-align: center;
+  font-family: var(--inner-header);
+}
+
 .input-wrapper {
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: center;
   width: 100%;
+  min-height: 80vh;
+  
 }
 
 .form-container {
@@ -140,4 +194,56 @@ button:hover {
   text-align: center;
   border-radius: 12px;
   transform: rotate(0deg);
+}
+
+.contact {
+  display: none;
+  flex-direction: column;
+  padding-top: 92px;
+  height: 80vh;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+}
+
+.contact-header {
+  font-family: var(--inner-header);
+  color: var(--col-dark);
+}
+
+.contact-body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 12px;
+  color: var(--col-dark);
+  font-family: var(--inner-header);
+  text-shadow: var(--col-dark);
+}
+
+.contact-body p {
+  font-size: 1.4rem;
+  font-weight: 400;
+}
+
+.contact-body ul li {
+  list-style: circle;
+  font-size: 1.2rem;
+}
+
+.footer-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--col-dark);
+  width: 100%;
+  height: 50px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  color: var(--col-light);
+  font-family: var(--inner-content);
+  font-size: 1.6em;
+  
 }
